fix project image size and description align

--- a/app/assets/stylesheets/_portfolio.scss
+++ b/app/assets/stylesheets/_portfolio.scss
@@ -66,6 +66,8 @@
       .project {
         padding: 5%;
         position: absolute;
+        width: 100%;
+        height: 100%;
         text-align: center;
         overflow: hidden;
         overflow-y: auto;
@@ -214,6 +216,7 @@
 }
 
 .project-open {
+  position: absolute;
   display: block;
   width: 100%;
   height: 100%;
